hphp/test/slow/autoload/function_autoload_map.php.expectf
Autoload function foo\test

Fatal error: Call to undefined function foo\test() in %s/function_autoload_map.php on line 11
